# deBruijn

./: README.md  compile.sh  install.sh
cppCode/: CMakeLists.txt  Dockerfile  README.md  add_boost.cmake  main.cpp  utility_functions.h
cppCode/src/: BBHash.h  BooPHF.h  ConstructKMers.h  GraphDS.cpp  GraphDS.h  PreProcess.h  RabinKarpHash.cpp  RabinKarpHash.h
cppCode/tests/: BBHashTest.cpp  ConstructKMersTest.cpp  GraphDSTest.cpp  PreProcessTest.cpp  RabinKarpTest.cpp
datasets/: ERR022075_1.fastq.1000_out  small.fa
datasets/outputs/: reduced.fq
javaCode/: pom.xml
javaCode/src/main/java/: GraphDS.java  HelloWorld.java  Matrix.java  RabinKarpHashing.java
javaCode/src/test/java/: RabinKarpHashingTest.java
pyCode/: Untitled.ipynb
pyCode/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
